# sandbox

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json
assets/: BrickWall29_4K_BaseColor.ktx
include/: ktx.h
include/glad/: gl.h  glad.h
lib/: ktx.lib
res/: StripedCotton01_2K_BaseColor.ktx
src/app/: main.cpp
src/client/: application_loop.cpp  application_loop.h  dynamic_prop.cpp  dynamic_prop.h  entity.cpp  entity.h  glfw_instance.cpp  glfw_instance.h  glfw_window.cpp  glfw_window.h  main.cpp  scene_diff_provider.h  static_prop.cpp  static_prop.h  static_prop_entity.cpp  static_prop_entity.h  test_entity.cpp  test_entity.h
src/client/glfw/: instance.cpp  instance.h  window.cpp  window.h
src/client/graphics/: camera_instance.h  rgb_spectrum.h
src/client/graphics/gl/: camera.h  camera_instance.h  graphics.cpp  render_target.h  scene_diff.h  scene_node.cpp  scene_node.h  unique_buffer.cpp  unique_shader.h  unique_vertex_array.cpp
src/client/rendering/: camera.h  camera_instance.h  material.h  mesh.h  render.h  render_destination.h  render_engine.h  render_group.h  render_stream.h  render_target.h  renderer.h  scene.h  scene_node.h  surface.h  surface_instance.h  unique_ptr.h
src/client/rendering/gl/: buffer.cpp  buffer.h  camera.cpp  camera.h  camera_instance.cpp  camera_instance.h  default_handle_init.h  default_render_destination.cpp  default_render_destination.h  default_render_target.cpp  material.cpp  material.h  mesh.cpp  mesh.h  render.cpp  render.h  render_destination.h  render_engine.cpp  render_engine.h  render_group.cpp  render_group.h  render_stream.cpp  render_stream.h  renderer.cpp  renderer.h  scene.cpp  scene.h  scene_diff.cpp  scene_diff.h  scene_node.cpp  scene_node.h  shader.cpp  shader.h  surface.cpp  surface.h  surface_instance.cpp  surface_instance.h  unique_buffer.h  unique_shader.cpp  unique_shader.h  (+3 more)
src/engine/: app.cpp  app.h  camera.h  glfw_init_guard.cpp  glfw_init_guard.h  glfw_window.cpp  glfw_window.h  window.cpp  window.h
src/game/: box.cpp  box.h  box_tests.cpp  game.cpp  game.h  game_state.cpp  game_state.h  timeout.cpp  timeout.h  timeout_tests.cpp
src/graphics/: camera.h  camera_instance.h  directional_light.h  graphics.h  material.h  mesh.h  render_stream.h  render_target.h  rgb_spectrum.h  scene.cpp  scene.h  scene_diff.h  scene_node.h  surface.h  surface_instance.h  surface_material.h  surface_mesh.h  texture.h  wireframe.h  wireframe_mesh.h
src/graphics/gl/: camera.cpp  camera.h  camera_instance.cpp  camera_instance.h  cascaded_shadow_map.cpp  cascaded_shadow_map.h  default_render_target.cpp  default_render_target.h  graphics.cpp  graphics.h  material.cpp  material.h  mesh.cpp  mesh.h  multiple_buffer.h  render_stream.cpp  render_stream.h  render_target.h  scene.cpp  scene.h  scene_diff.cpp  scene_diff.h  scene_node.cpp  scene_node.h  surface.cpp  surface.h  surface_instance.cpp  surface_instance.h  surface_material.cpp  surface_material.h  surface_mesh.cpp  surface_mesh.h  surface_resource.cpp  surface_resource.h  temporal_accumulation_buffer.cpp  temporal_accumulation_buffer.h  temporal_antialiasing_resource.cpp  temporal_antialiasing_resource.h  texture.cpp  texture.h  (+28 more)
src/graphics/gl/shaders/: fullscreen.h  lighting.h  postprocessing.h  surface.h  temporal_antialiasing.h
src/graphics/gl/wrappers/: unique_buffer.cpp  unique_buffer.h  unique_framebuffer.cpp  unique_framebuffer.h  unique_shader.cpp  unique_shader.h  unique_shader_program.cpp  unique_shader_program.h  unique_sync.cpp  unique_sync.h  unique_texture.cpp  unique_texture.h  unique_vertex_array.cpp  unique_vertex_array.h  wrappers.h
src/graphics/glad/: gl.cpp  glad.cpp
src/load_png/: load_png.cpp  load_png.h
src/math/: aabb.h  mat.cpp  mat.h  math.h  quat.cpp  quat.h  scalar.h  unreachable.h  vec.cpp  vec.h
src/physics/: aabb.h  aabb_tree.h  ball.cpp  ball.h  bounding_box.h  bounds.h  bounds_tree.h  box.cpp  box.h  broadphase.h  constraint.h  contact.cpp  contact.h  dynamic_rigid_body.h  half_space.cpp  half_space.h  handle.h  material.h  narrowphase.h  object.h  object_storage.h  particle.cpp  particle.h  physics.h  rigid_body.h  shape.h  space.cpp  space.h  static_body.h  static_rigid_body.h  world.cpp  world.h
src/platform/: app.cpp  app.h  glfw_init_guard.cpp  glfw_init_guard.h  glfw_window.cpp  glfw_window.h  window.cpp  window.h
src/shared/math/: mat.cpp  mat.h  quat.cpp  quat.h  vec.cpp
src/shared/util/: lifetime_guard.h
src/util/: array.h  array_tests.cpp  bit_list.h  bit_list_tests.cpp  capacity_error.h  contiguous_storage.h  equal.h  hash.h  lifetime_box.h  list.h  list_tests.cpp  map.h  map_tests.cpp  memory.cpp  memory.h  memory_tests.cpp  object_pool.h  pool.h  queue.h  queue_tests.cpp  set.h  set_tests.cpp  stack.h  stack_tests.cpp  thread_pool.cpp  thread_pool.h
